# store_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/routers/: products.py
app/schemas/: product.py
app/services/: products.py
app/storage/: products.py
tests/: test_products_api.py
